grammar.ebnf
program   ::= { statement } exit
statement ::= ( decl | assign | if | while ) NL
decl      ::= type ["const"] ident ["=" expr]
assign    ::= ident "=" expr
type      ::= "int" | "double" | "bool"
if        ::= "if" expr ":" NL block [ "else" ":" NL block ]
while     ::= "while" expr ":" NL block
block     ::= TAB statement { TAB statement } [ TAB exit NL ] | TAB exit NL
exit      ::= "exit" expr
expr      ::= arith [ ( "==" | "!=" ) arith ]
arith     ::= term { ( "+" | "-" ) term }
term      ::= factor { "*" factor }
factor    ::= number | "true" | "false" | ident | "!" factor
